# soft-brightness

./: .gitattributes  .gitignore  .travis.yml  README.md  TODO.md  autogen-meson  extension.js  git-subtree-pull  git-subtree-push  meson-gse  meson-gse.build  meson.build  meson.build.gse-lib  meson.build.m4  metadata.json  prefs.js  stylesheet.css  utils.js
.github/workflows/: build-extension.yaml
gse-lib/: README.md  autogen-meson  git-subtree-push  meson.build.m4
gse-lib/meson-scripts/: install-po  make-extension
lib/: logger.js
meson-gse/: .gitignore  LICENSE  README.md  git-subtree-pull  git-subtree-push  meson-gse  meson.build.m4
meson-gse/lib/: logger.js
meson-gse/meson-scripts/: install-po
meson-gse/po/: meson.build
meson-scripts/: install-po  make-extension
po/: LINGUAS  POTFILES  cs.po  fa.po  fr.po  meson.build  nl.po  soft-brightness-plus.pot  soft-brightness.pot  tr.po
schemas/: gschemas.compiled  org.gnome.shell.extensions.soft-brightness-plus.gschema.xml  org.gnome.shell.extensions.soft-brightness.gschema.xml
src/: cursor.js  extension.js  logger.js  meson.build  metadata.json.in  prefs.js  stylesheet.css  utils.js
